--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "description": "PHP router class",
     "license": "MIT",
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "illuminate/database": "*",
+        "filp/whoops": "*"
     },
     "autoload": {
         "psr-4": {
