modify sherlock class

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         },
         "files": [
             "helpers.php",
-            "Sherlock.php"
+            "Sherlock.php",
+            "Holmes.php"
         ]
     }
 }
